--- a/cover.html
+++ b/cover.html
@@ -55,7 +55,7 @@
 			<div id="nav">
 				<select id="files">
 				
-				<option value="file0">bookstore/feature/users/usecase/logic.go (80.0%)</option>
+				<option value="file0">bookstore/feature/users/usecase/logic.go (81.5%)</option>
 				
 				</select>
 			</div>
@@ -73,7 +73,7 @@
 
 import (
         "bookstore/domain"
-        "bookstore/feature/users/data"
+        delivery "bookstore/feature/users/delivery"
         "errors"
         "log"
 
@@ -94,27 +94,32 @@ func New(ud domain.UserData, v *validator.Validate) domain.UserUsecase <span cla
         }
 }</span>
 
-func (ud *userUsecase) AddUser(newUser domain.User) (domain.User, error) <span class="cov8" title="1">{
-        var cnv = data.FromModel(newUser)
-        err := ud.validate.Struct(cnv)
-        if err != nil </span><span class="cov0" title="0">{
-                log.Println("Validation error : ", err.Error())
-                return domain.User{}, err
+func (ud *userUsecase) AddUser(newUser domain.User) (row int, err error) <span class="cov8" title="1">{
+
+        if newUser.Fullname == "" </span><span class="cov8" title="1">{
+                return -1, errors.New("invalid fullname")
         }</span>
+        <span class="cov8" title="1">if newUser.Username == "" </span><span class="cov8" title="1">{
+                return -1, errors.New("invalid username")
+        }</span>
+        <span class="cov8" title="1">if newUser.Password == "" </span><span class="cov8" title="1">{
+                return -1, errors.New("invalid password")
+        }</span>
+        <span class="cov8" title="1">if newUser.Phone == "" </span><span class="cov8" title="1">{
+                return -1, errors.New("invalid phone number")
+        }</span>
+
         <span class="cov8" title="1">hashed, err := bcrypt.GenerateFromPassword([]byte(newUser.Password), bcrypt.DefaultCost)
         if err != nil </span><span class="cov0" title="0">{
                 log.Println("error encrypt password", err)
-                return domain.User{}, err
+                return -3, err
         }</span>
         <span class="cov8" title="1">newUser.Password = string(hashed)
         inserted, err := ud.userData.Insert(newUser)
 
         if err != nil </span><span class="cov8" title="1">{
                 log.Println("error from usecase", err.Error())
-                return domain.User{}, err
-        }</span>
-        <span class="cov8" title="1">if inserted.ID == 0 </span><span class="cov8" title="1">{
-                return domain.User{}, errors.New("cannot insert data")
+                return -4, err
         }</span>
         <span class="cov8" title="1">return inserted, nil</span>
 }
@@ -125,22 +130,35 @@ func (ud *userUsecase) LoginUser(userLogin domain.User) (response int, data doma
         return response, data, err
 }</span>
 
-func (ud *userUsecase) UpdateUser(id int, updateProfile domain.User) (domain.User, error) <span class="cov8" title="1">{
-        if id == -1 </span><span class="cov0" title="0">{
-                return domain.User{}, errors.New("invalid user")
+func (ud *userUsecase) UpdateUser(id int, updateProfile domain.User) (row int, err error) <span class="cov8" title="1">{
+        var tmp delivery.UpdateFormat
+        qry := map[string]interface{}{}
+        if tmp.Fullname != "" </span><span class="cov0" title="0">{
+                qry["fullname"] = &amp;tmp.Fullname
         }</span>
-        <span class="cov8" title="1">hashed, err := bcrypt.GenerateFromPassword([]byte(updateProfile.Password), bcrypt.DefaultCost)
+        <span class="cov8" title="1">if tmp.Username != "" </span><span class="cov0" title="0">{
+                qry["username"] = &amp;tmp.Username
+        }</span>
+        <span class="cov8" title="1">if tmp.Phone != "" </span><span class="cov0" title="0">{
+                qry["phone"] = &amp;tmp.Phone
+        }</span>
 
+        <span class="cov8" title="1">if id == -1 </span><span class="cov0" title="0">{
+                return 0, errors.New("invalid user")
+        }</span>
+
+        <span class="cov8" title="1">hashed, err := bcrypt.GenerateFromPassword([]byte(updateProfile.Password), bcrypt.DefaultCost)
         if err != nil </span><span class="cov0" title="0">{
                 log.Println("error encrypt password", err)
-                return domain.User{}, err
+                return 0, err
         }</span>
-        <span class="cov8" title="1">updateProfile.Password = string(hashed)
-        result := ud.userData.Update(id, updateProfile)
 
-        if result.ID == 0 </span><span class="cov8" title="1">{
-                return domain.User{}, errors.New("error update user")
+        <span class="cov8" title="1">updateProfile.Password = string(hashed)
+        result, err := ud.userData.Update(id, updateProfile)
+        if err != nil </span><span class="cov8" title="1">{
+                return 0, errors.New("username or phone number already exist")
         }</span>
+
         <span class="cov8" title="1">return result, nil</span>
 }
 
